update session tables added _config.yml for jekyll issue ref: https://github.com/jekyll/jekyll/issues/2938 emergency modified scss&css for screen layout is broken in firefox

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1353,6 +1353,7 @@ underpages for mobile
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	height: 1.2em;
+	max-width: 440px;
 }
 @media screen and (max-width: 768px) {
 	.temp-desc {
